force-app/src/objects/c2g__CustomFormLayoutSection__c.object
<CustomObject>
    <description>Stores the details of the custom form layout rows and grids including those in the summary section.</description>
    <fields>
        <fullName>c2g__CustomFormLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomFormLayout</label>
        <referenceTo>c2g__CustomFormLayout__c</referenceTo>
        <relationshipLabel>CustomForm Layout Sections</relationshipLabel>
        <relationshipName>CustomFormLayoutSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SectionTitle__c</fullName>
        <label>Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CustomForm Layout Section</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFLS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomForm Layout Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>